# pyfsd

./: .copier-answers.yml  .flake8  .gitignore  .gitpod.yml  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  LICENSE  README.md  WIP_application.tac  debug.patch  mkdocs.yml  mypy.ini  pyfsd.ini  pyfsd.tac  pyfsd.toml  pyproject.toml  run_without_logger.py  test.cpp  versioneer_helper.py
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: docs.yml  docs1.yml  python-package.yml  python.yml
docs/: code_of_conduct.md  configure.md  index.md  install.md  plugin.md
docs/cmdline_tools/: import_user.md
docs/develop/: plugin.md
pyfsd/: __init__.py  __main__.py  _version.py  auth.py  config.py  database.py  db_tables.py  legacy_config.py  legacy_pyfsd.py  plugin.py  pyfsd.py  service.py  setup_loguru.py  twistd.help
pyfsd/client/: factory.py  prompt.py  protocol.py
pyfsd/define/: .packet.py.swp  broadcast.py  config_check.py  errors.py  packet.py  simulation.py  utils.py
pyfsd/factory/: client.py
pyfsd/metar/: fetch.py  manager.py  profile.py  service.py
pyfsd/object/: client.py
pyfsd/plugins/: README.md  __init__.py  awc-metar.py  awc_metar.py  whazzup.py
pyfsd/prompt/: protocol.py  raw_mode.py  service.py  stdout_helper.py  utf_8.py
pyfsd/protocol/: client.py
pyfsd/utils/extend_users/: __main__.py  formats.py
pyfsd/utils/import_users/: __main__.py
scripts/: gen_credits.py  gen_ref_nav.py
src/pyfsd/: __init__.py  __main__.py  _version.py  auth.py  db_tables.py  dependencies.py  main.py  plugin.py  service.py  setup_logger.py  setup_loguru.py
src/pyfsd/define/: __init__.py  broadcast.py  check_dict.py  config_check.py  errors.py  packet.py  simulation.py  utils.py
src/pyfsd/factory/: __init__.py  client.py
src/pyfsd/metar/: __init__.py  fetch.py  manager.py  profile.py  service.py
src/pyfsd/object/: __init__.py  client.py
src/pyfsd/plugin/: __init__.py  collect.py  interfaces.py  manager.py  types.py
src/pyfsd/plugins/: __init__.py
src/pyfsd/prompt/: raw_mode.py  raw_mode.pyi  service.py  stdout_helper.py
src/pyfsd/protocol/: __init__.py  client.py
src/pyfsd/utils/: __init__.py
src/pyfsd/utils/import_users/: __init__.py  __main__.py  formats.py
src/twisted/plugins/: pyfsd_launcher.py  pyfsd_migrated_notice.py
tests/: __init__.py
tests/pyfsd/: __init__.py
tests/pyfsd/define/: __init__.py  test_check_dict.py  test_config_check.py  test_packet.py  test_simuation.py  test_utils.py
twisted/plugins/: pyfsd_client_prompt.py  pyfsd_launcher.py  pyfsd_plugin.py  pyfsd_twistd.py
under_dev/: README.md  skip_previous_fetcher_cron_mode.diff
