[project]
name = "pyfsd"
dynamic = ["version"]
description = "An implementation of protocol 9 of FSD based on Python & Twisted."
authors = [
    {name = "gamecss", email = "52902973+gamecss@users.noreply.github.com"},
]
dependencies = [
    "twisted>=22.10.0",
    "loguru>=0.7.0",
    "haversine>=2.8.0",
    "tomli>=2.0.1; python_version < \"3.11\"",
    "metar>=1.10.0",
    "constantly>=15.1.0",
    "alchimia>=0.8.1",
    "sqlalchemy~=1.3",
]
classifiers = [
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
]
requires-python = ">=3.8.1"
readme = "README.md"
license = {text = "MIT"}

[project.optional-dependencies]
docs = [
    "mkdocs-material>=9.1.18",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-minify-plugin>=0.6.4",
]

[tool.pdm.dev-dependencies]
dev = [
    "black>=23.3.0",
    "flake8>=6.0.0",
    "isort>=5.12.0",
    "mypy-zope>=0.9.1",
    "mypy>=1.0.1",
    "flake8-pyi>=23.6.0",
]

[build-system]
requires = ["pdm-backend"]
build-backend = "pdm.backend"

[tool.isort]
profile = "black"

[tool.pdm.scripts]
start = "twistd -n pyfsd"

[tool.pdm.build]
includes = ["src/pyfsd/", "src/twisted/", "src/pyfsd/plugins/__init__.py"]
excludes = ["src/pyfsd/plugins/*", "src/twisted/plugins/dropin.cache"]

[tool.pdm.version]
source = "scm"
write_to = "pyfsd/_version.py"
write_template = "version = \"{}\"\n"

[tool.pyright]
exclude = [
    "**/__pycache__",
    "__pypackages__",
    ".venv",
    ".git",
]
