[build-system]
requires = ["pdm-backend", "versioneer[toml]>=0.29" ]
build-backend = "pdm.backend"

[project]
name = "pyfsd"
description = "An implementation of protocol 9 of FSD based on Python."
authors = [{name = "gamecss", email = "52902973+gamecss@users.noreply.github.com"}]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.8.1"
keywords = []
dynamic = ["version"]
classifiers = [
    "Development Status :: 2 - Pre-Alpha",
    "Intended Audience :: End Users/Desktop",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Documentation",
    "Typing :: Typed",
]
dependencies = [
    "loguru>=0.7.0",
    "haversine>=2.8.0",
    "tomli>=2.0.1; python_version < \"3.11\"",
    "metar>=1.10.0",
    "sqlalchemy[asyncio]>=2.0.25",
    "aiohttp>=3.8.6",
    "typing-extensions>=4.9.0",
    "argon2-cffi>=23.1.0",
    "dependency-injector-fork>=4.42.1",
]

[project.urls]
Homepage = "https://github.com/cfcsim/pyfsd"
Documentation = "https://cfcsim.github.io/pyfsd"
Repository = "https://github.com/cfcsim/pyfsd"
Issues = "https://github.com/cfcsim/pyfsd/issues"
Discussions = "https://github.com/cfcsim/pyfsd/discussions"

[project.optional-dependencies]
sqlite3 = [
    "aiosqlite>=0.19.0"
]
postgresql = [
    "asyncpg>=0.29.0",
]
mysql = [
    "asyncmy>=0.2.9",
]
oracle = [
    "oracledb>=2.0.1",
]
mssql = [
    "aioodbc>=0.5.0",
]

[tool.pdm.build]
package-dir = "src"
includes = ["src/pyfsd/plugins/__init__.py"]
excludes = ["src/pyfsd/plugins/*"]

[tool.pdm.dev-dependencies]
docs = [
    "mkdocs-material>=9.1.18",
    "mkdocstrings[python]>=0.22.0",
    "mkdocs-minify-plugin>=0.6.4",
    "markdown-callouts>=0.2",
    "markdown-exec>=0.5",
    "mkdocs>=1.5",
    "mkdocs-gen-files>=0.3",
    "mkdocs-git-committers-plugin-2>=1.1",
    "mkdocs-literate-nav>=0.4",
    "mkdocs-minify-plugin>=0.6.4",
]
dev = [
    "mypy>=1.0.1",
    "ruff>=0.1.8",
]

[tool.pdm.scripts]
start = "twistd -n pyfsd"

[tool.pdm.version]
source = "call"
getter = "versioneer:get_version"
write_to = "pyfsd/_version.py"
write_template = "version = \"{}\"\n"

[tool.pyright]
exclude = [
    "**/__pycache__",
    "__pypackages__",
    ".venv",
    ".git",
]

[tool.ruff.lint]
select = [
    "E",
    "F",
    "W",
    "I",
    "N",
    "D",
    "UP",
    "ASYNC",
    "S",
    "B",
    "A",
    "C4",
    "PIE",
    "Q",
    "RET",
    "SIM",
    "FIX",
    "RUF"
]
fixable = ["ALL"]
exclude = [".venv"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.pyupgrade]
keep-runtime-typing = true

[tool.versioneer]
VCS = "git"
style = "pep440"
versionfile_source = "NONE"
versionfile_build = "NONE"
tag_prefix = ""
parentdir_prefix = "pyfsd-"
